fix alert width on small devices

--- a/src/components/Alert.css
+++ b/src/components/Alert.css
@@ -1,34 +1,44 @@
 @keyframes slideRight {
-    0% {
-      transform: translateX(-50%);
-    }
-    100% {
-      transform: translateX(0);
-    }
+  0% {
+    transform: translateX(-50%);
   }
-  
+  100% {
+    transform: translateX(0);
+  }
+}
+
 .alert-container {
-    padding: 0;
-    margin: 0;
-    animation: slideRight 1s ease-in-out;
-    align-self: center;
-    position: absolute;
+  padding: 0;
+  margin: 0;
+  animation: slideRight 1s ease-in-out;
+  align-self: center;
+  position: absolute;
 }
 
 .alert {
-  
-    --bs-alert-color: #dadada;
-    --bs-alert-bg: #32323a;
-    --bs-alert-border-color: #e4aa48;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+  --bs-alert-color: #dadada;
+  --bs-alert-bg: #32323a;
+  --bs-alert-border-color: #e4aa48;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
-.alert-progress {
-    border-bottom-left-radius:0px ;
-    border-bottom-right-radius:0px ;
+.form-container .progress {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
-.alert .alert-heading, .alert .contact-button {
-    margin: 0;
+.alert .alert-heading,
+.alert .contact-button {
+  margin: 0;
+}
+
+.form-container .alert .btn {
+  border: none;
+  padding: none;
+  --bs-btn-padding-x: 0;
+  --bs-btn-padding-y: 0;
+}
+
+@media (max-width: 768px) {
 }
