--- a/src/sections/Projects.css
+++ b/src/sections/Projects.css
@@ -2,3 +2,7 @@
     padding-top: 3.6rem;
     min-height: 100vh;
 }
+
+.projects-section .pagination {
+    margin-bottom: 3.6rem
+}
